# chatgpt-saved-session-to-markdown

./: .deepsource.toml  .pre-commit-config.yaml  .sonarcloud.properties  README.md  copilot-instructions.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  social-preview.md
.github/workflows/: auto-create-milestones.yml  ci.yml  codeql.yml  pr-lint.yml  release.yml
src/chat_export_md/: __init__.py  cli.py  extractor.py
src/chatgpt_saved_session_to_markdown/: __init__.py  cli.py  extractor.py
tests/: __init__.py  pytest_runner.py  run_e2e_test.py  run_e2e_tests.py  test_basic.py  test_cli.py  test_copilot_e2e.py  test_copilot_e2e_test.py  test_extractor.py
